Fix thumbnail whitespace.

--- a/galleria.showroom.css
+++ b/galleria.showroom.css
@@ -31,7 +31,7 @@
   z-index: 2;
   background: #fff;
 }
-.galleria-carousel .galleria-thumbnails-list {
+.galleria-thumbnails-list {
   padding: 12px 0;
 }
 .galleria-thumbnails .galleria-image {
